1、优化注释、调整查询Id类型。 2、新增编辑配置 3、循环依赖、构建查询表达式 4、Quartz定时调度 5、文件操作

--- a/FastStart.WebApi/FastStart.WebApi.csproj
+++ b/FastStart.WebApi/FastStart.WebApi.csproj
@@ -6,17 +6,21 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
     <DocumentationFile>swagger.xml</DocumentationFile>
+	<ErrorOnDuplicatePublishOutputFiles>false</ErrorOnDuplicatePublishOutputFiles>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.30" />
+    <PackageReference Include="Quartz.AspNetCore" Version="3.9.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
+    <PackageReference Include="StackExchange.Redis" Version="2.7.33" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\FastStart.Common\FastStart.Common.csproj" />
+    <ProjectReference Include="..\FastStart.Quartz\FastStart.Quartz.csproj" />
     <ProjectReference Include="..\FastStart.Service\FastStart.Service.csproj" />
   </ItemGroup>
 
