--- a/FastStart.WebApi/appsettings.json
+++ b/FastStart.WebApi/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "MySql": "Server=127.0.0.1,3306;Database=ry-vue;Uid=root;Pwd=123456;Charset=utf8mb4",
-    "SqlServer": "server=127.0.0.1;uid=sa;pwd=sa;database=dotnetcore;Encrypt=True;TrustServerCertificate=True;"
+    "SqlServer": "server=127.0.0.1;uid=sa;pwd=Bujing123...;database=ry-vue;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=true;  "
   }
 }
